# tmux-tools

./: .gitignore  Cargo.toml  README.md  SKILL.md
src/: format.rs  idle.rs  lib.rs  main.rs  names.rs  target.rs  tmux.rs  util.rs
src/agents/: builtin.rs  mod.rs
src/cmd/: capture.rs  escape.rs  execute.rs  interrupt.rs  kill.rs  launch.rs  list.rs  mod.rs  prompt.rs  safety.rs  send.rs  send_enter.rs  spawn_agent.rs  status.rs  wait_idle.rs
tests/: integration.rs
