[package]
name = "tmux-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tmux-tools"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
toml = "0.8"
dirs = "5"

[dev-dependencies]
serde_json = "1"
